<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="24dp"
    app:cardElevation="4dp"
    android:backgroundTint="@null">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:paddingBottom="8dp">

        <!-- Product Image -->
        <ImageView
            android:id="@+id/product_image"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="fitCenter"
            android:src="@drawable/insalata" />

        <!-- Product Title -->
        <TextView
            android:id="@+id/product_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/alexandria_bold"
            android:text="@string/text10"
            android:textSize="14sp"
            android:layout_marginStart="6dp" />

        <!-- Product Description -->
        <TextView
            android:id="@+id/product_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/text11"
            android:fontFamily="@font/alexandria_light"
            android:textSize="14sp"
            android:layout_marginStart="6dp" />

        <!-- Product Price -->
        <TextView
            android:id="@+id/product_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text9"
            android:textSize="12sp"
            android:fontFamily="@font/alexandria_bold"
            android:layout_marginStart="6dp" />

        <ImageButton
            android:id="@+id/sellerEditButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:backgroundTint="@color/white"
            android:scaleType="centerInside"
            android:src="@drawable/edit"
            android:layout_gravity="end"
            android:layout_marginEnd="10dp"/>


    </LinearLayout>

</androidx.cardview.widget.CardView>
