<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/shop_detail_layout">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="160dp"
        android:contentDescription="@string/imageDescr1"
        android:src="@drawable/shopimage"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:shapeAppearanceOverlay="@style/CustomImageShape" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:fontFamily="@font/alexandria_bold"
        android:text="@string/text1"
        android:textAlignment="center"
        android:textSize="48sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/myCustomButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/button_background"
        android:fontFamily="@font/alexandria_light"
        android:padding="12dp"
        android:text="@string/button1"
        android:textSize="16sp"
        app:backgroundTint="@null"
        app:elevation="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <RatingBar
        android:id="@+id/ratings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:rating="4.3"
        app:layout_constraintTop_toBottomOf="@+id/myCustomButton"
        android:layout_marginTop="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/reviewsText"
        android:layout_marginStart="10dp" />


    <TextView
        android:id="@+id/reviewsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/alexandria_light"
        android:text="@string/text2"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/myCustomButton"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/reviews_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ratings" />
<!--
    <HorizontalScrollView
        android:id="@+id/reviewCarousel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ratings">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <androidx.cardview.widget.CardView
                android:id="@+id/reviewCard"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                app:cardElevation="4dp"
                android:layout_marginEnd="5dp"
                app:cardCornerRadius="8dp" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:id="@+id/reviewer_name_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="John Doe"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:paddingBottom="8dp"/>

                    <RatingBar
                        android:id="@+id/review_rating_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:numStars="5"
                        android:stepSize="0.5"
                        android:rating="4.5"
                        style="?android:attr/ratingBarStyleSmall"
                        android:paddingBottom="8dp"/>

                    <TextView
                        android:id="@+id/review_text_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Great service and quality products!"
                        android:textSize="14sp"/>

                </LinearLayout>
            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="5dp"
                app:cardElevation="4dp"
                app:cardCornerRadius="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:id="@+id/reviewer_name_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Jane Smith"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:paddingBottom="8dp"/>

                    <RatingBar
                        android:id="@+id/review_rating_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:numStars="5"
                        android:stepSize="0.5"
                        android:rating="5"
                        style="?android:attr/ratingBarStyleSmall"
                        android:paddingBottom="8dp"/>

                    <TextView
                        android:id="@+id/review_text_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Absolutely loved it! Highly recommend."
                        android:textSize="14sp"/>

                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </HorizontalScrollView>
    -->

    <com.google.android.material.button.MaterialButton
        android:id="@+id/ratingsButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_background"
        app:backgroundTint="@null"
        android:fontFamily="@font/alexandria_light"
        android:padding="12dp"
        android:textSize="16sp"
        app:elevation="4dp"
        android:text="@string/button2"
        app:layout_constraintTop_toBottomOf="@+id/reviews_list"
        android:layout_marginTop="12dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/button_with_arrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:layout_marginTop="50dp"
        android:layout_marginStart="38dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="8dp"
        android:text="@string/button3"
        android:fontFamily="@font/alexandria_light"
        android:textSize="16sp" />



</androidx.constraintlayout.widget.ConstraintLayout>